--- a/charts/civil-ccd/values.preview.template.yaml
+++ b/charts/civil-ccd/values.preview.template.yaml
@@ -119,7 +119,9 @@ aac-manage-case-assignment:
     ingressHost: manage-case-assignment-${SERVICE_NAME}.preview.platform.hmcts.net
 
 xui-webapp:
+  image: 'hmctspublic.azurecr.io/xui/webapp:pr-4193-8bc4932-20250117173234'
   nodejs:
+    image: 'hmctspublic.azurecr.io/xui/webapp:pr-4193-8bc4932-20250117173234'
     ingressHost: xui-${SERVICE_FQDN}
     environment:
       SERVICES_WORK_ALLOCATION_TASK_API: http://{{ .Release.Name }}-wa-task-management-api
