Revert "testing camunda connection to postgres flexible server"
This reverts commit d3065c7574569e805f7cb43c4b48236652b7a950.

--- a/charts/civil-ccd/values.preview.template.yaml
+++ b/charts/civil-ccd/values.preview.template.yaml
@@ -203,8 +203,8 @@ camunda-bpm:
 #      CAMUNDA_DB_USER_NAME: hmcts
 #      CAMUNDA_DB_CONN_OPTIONS: "?stringtype=unspecified&reWriteBatchedInserts=true&sslmode=require"
 #      CAMUNDA_DB_NAME: "pr-${CHANGE_ID}-camunda"
-#      CAMUNDA_DB_PASSWORD: ${POSTGRES_PASSWORD}
-#      CAMUNDA_DB_USER_NAME: ${POSTGRES_USER}
+      CAMUNDA_DB_PASSWORD: ${POSTGRES_PASSWORD}
+      CAMUNDA_DB_USER_NAME: ${POSTGRES_USER}
       TEMP_VAR: false
 
 postgresql:
