--- a/charts/civil-ccd/values.preview.template.yaml
+++ b/charts/civil-ccd/values.preview.template.yaml
@@ -3,7 +3,7 @@ civil-wa:
 
 civil-service:
   java:
-    image: 'hmctspublic.azurecr.io/civil/service:pr-5996'
+    image: 'hmctspublic.azurecr.io/civil/service:pr-6041'
     keyVaults:
       civil:
         resourceGroup: civil
@@ -161,7 +161,7 @@ ccd:
     java:
       releaseNameOverride: ${SERVICE_NAME}-am-role-assignment-service
       imagePullPolicy: Always
-      image: hmctspublic.azurecr.io/am/role-assignment-service:latest
+      image: hmctspublic.azurecr.io/am/role-assignment-service:pr-2441
       ingressHost: am-role-assignment-${SERVICE_FQDN}
       environment:
         RELEASE_REVISION: "{{ .Release.Revision }}"
