--- a/charts/civil-ccd/values.template.yaml
+++ b/charts/civil-ccd/values.template.yaml
@@ -6,10 +6,10 @@ civil-translation:
 
 am-org-role-mapping-service:
   enabled: false
-  
+
 civil-general-applications:
   java:
-    image: 'hmctspublic.azurecr.io/civil/general-applications:latest'
+    image: 'hmctspublic.azurecr.io/civil/general-applications:pr-1652'
     imagePullPolicy: Always
     ingressHost: ga-${SERVICE_FQDN}
     releaseNameOverride: ${SERVICE_NAME}-ga
