--- a/charts/civil-ccd/values.template.yaml
+++ b/charts/civil-ccd/values.template.yaml
@@ -53,6 +53,7 @@ civil-general-applications:
           - name: microservicekey-civil-general-applications
             alias: idam.s2s-auth.totp_secret
     environment:
+      CAMUNDA_URL: https://camunda-${SERVICE_FQDN}/engine-rest/
       CORE_CASE_DATA_API_URL: http://${SERVICE_NAME}-ccd-data-store-api
       OIDC_ISSUER: https://forgerock-am.service.core-compute-idam-aat2.internal:8443/openam/oauth2/realms/root/realms/hmcts
       REFERENCE_DATABASE_MIGRATION: false
