--- a/charts/civil-ccd/Chart.yaml
+++ b/charts/civil-ccd/Chart.yaml
@@ -66,3 +66,9 @@ dependencies:
     version: ~0.0.58
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: am-org-role-mapping-service.enabled
+
+# Stiching
+  - name: ccd-case-document-am-api
+    version: 1.7.14
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    condition: ccd-case-document-am-api.enabled
