--- a/charts/civil-ccd/Chart.yaml
+++ b/charts/civil-ccd/Chart.yaml
@@ -68,7 +68,11 @@ dependencies:
     condition: am-org-role-mapping-service.enabled
 
 # Stiching
-  - name: ccd-case-document-am-api
-    version: 1.7.14
+  - name: em-ccdorc
+    version: 2.0.25
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
-    condition: ccd-case-document-am-api.enabled
+    condition: em-ccdorc.enabled
+  - name: em-stitching
+    version: 1.0.55
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    condition: em-stitching.enabled
